# Kotocord

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.example  DEV_GUIDE.md  DISCUSSION.md  README.md
src/: main.cpp
src/ui/: MainWindow.cpp
src/utils/: AppPaths.h
